add double click overlays

--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
       background-repeat: no-repeat;
       height: 100%;
     }
+
+    /* Media query for mobile view to add 50% transparency */
+    @media (max-width: 767.98px) {
+      .navbar-collapse.collapse.show {
+        background-color: rgba(255, 255, 255, 0.5) !important;
+      }
+    }
   </style>
 
   <!-- Favicon -->
