add places to eat section

--- a/faq.html
+++ b/faq.html
@@ -202,9 +202,24 @@
         <br>
 
         <p class="d-inline-flex gap-1">
+          <button class="faq-question btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDog" aria-expanded="false" aria-controls="collapseDog">
+            <span>
+              Can I bring my dog?
+            </span>
+            <i class="fas fa-chevron-down ms-2"></i>
+          </button>
+        </p>
+        <div class="collapse" id="collapseDog">
+          <div class="card card-body"><p>
+            Dogs are not allowed at the venue, as much as we all love our four-legged friends.
+          </p></div>
+        </div>
+        <br>
+
+        <p class="d-inline-flex gap-1">
           <button class="faq-question btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseQuestions" aria-expanded="false" aria-controls="collapseQuestions">
             <span>
-              Whom should I call with questions?
+              Whom should I call with additional questions?
             </span>
             <i class="fas fa-chevron-down ms-2"></i>
           </button>
@@ -212,6 +227,21 @@
         <div class="collapse" id="collapseQuestions">
           <div class="card card-body"><p>
             As we will be very busy day of, please bring any concerns or questions to our lovely coordinator XX. She can be reached at XXX-XXX-XXXX.
+          </p></div>
+        </div>
+        <br>
+
+        <p class="d-inline-flex gap-1">
+          <button class="faq-question btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseName" aria-expanded="false" aria-controls="collapseName">
+            <span>
+              Are you changing your last names?
+            </span>
+            <i class="fas fa-chevron-down ms-2"></i>
+          </button>
+        </p>
+        <div class="collapse" id="collapseName">
+          <div class="card card-body"><p>
+            We aren't officially changing our names (hello paperwork!), but we're open to suggestions to unofficially title our new family unit. Kent-Sawyers or Sawyers-Kent? Something entirely new? Maybe down the road.
           </p></div>
         </div>
         <br>
