--- a/thank-you.html
+++ b/thank-you.html
@@ -97,15 +97,15 @@
         <div class="row text-center">
           <div class="col">
             <img src="images/NY_Rhinebeck_136439_1939_62500.jpg" class="img-fluid" alt="Rhinebeck Map"  ondblclick="popImage(this.src)">
-            <p>USGS 1939<br>New York Rhinebeck Quadrangle</p>
+            <p>USGS 1939<br>New York - Rhinebeck Quadrangle</p>
           </div>
           <div class="col">
             <img src="images/CO_Boulder_402336_1904_62500.jpg" class="img-fluid" alt="Boulder Map" ondblclick="popImage(this.src)">
-            <p>USGS 1904<br>Colorado Boulder Quadrangle</p>
+            <p>USGS 1904<br>Colorado - Boulder Quadrangle</p>
           </div>
           <div class="col">
             <img src="images/VA_Mt Vernon_189090_1894_125000.jpg" class="img-fluid" alt="Alexandria Map" ondblclick="popImage(this.src)">
-            <p>USGS 1894<br>Virginia-Maryland Mt. Vernon Sheet</p>
+            <p>USGS 1894<br>Virginia-Maryland - Mt. Vernon Sheet</p>
           </div>
         </div>
       </div>  
