--- a/story.html
+++ b/story.html
@@ -117,7 +117,10 @@
           <div class="row">
               <div class="col-md-6">
                   <h2>Julia Kent</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                  <p>Julia is from the mid-Hudson Valley New York. She moved to Colorado in 2016 to study Atmospheric and Oceanic Sciences at CU Boulder.
+                    Since 2019 she has worked as a scientist/software engineer for climate analysis at the National Center for Atmospheric Research.
+                    She loves to knit, read fantasy, and swim-bike-run triathlons.
+                  </p>
               </div>
               <div class="col-md-6">
                   <img src="images/ny.png" alt="Placeholder Image" class="img-fluid">
@@ -127,7 +130,10 @@
           <div class="row mt-4">
               <div class="col-md-6">
                   <h2>Maggie Sawyers</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                  <p>Maggie was born in Germany, but considers Alexandria, Virginia her hometown. She moved to Colorado in 2017, and has been forming an ever growing community here ever since.
+                    Maggie works as an accountant for the Buddhist publication company Shambhala Publications.
+                    She loves permaculture, collaging, and pin-collecting. 
+                  </p>
               </div>
               <div class="col-md-6">
                   <img src="images/va.png" alt="Placeholder Image" class="img-fluid">
@@ -137,20 +143,19 @@
           <div class="row mt-4">
             <div class="col-md-6">
                 <h2>Together</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                <p>Maggie and Julia have a shared love for hiking, hot springs, live music, and their cats Pabu and Raava. They're both known to break into song randomly.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" style="padding-bottom:1rem">
                 <img src="images/usa_nogrid.png" alt="Placeholder Image" class="img-fluid">
             </div>
         </div>
     </div>
 
-      <div class="container" style="padding-top: 1rem; padding-bottom: 1rem">
-        <p>
-          Maggie and Julia have a shared love for hiking, hot springs, live music, and their cats Pabu and Raava. <br>
-          Here is a gallery of some of our adventures together:
-        </p>
-      </div>
+    <div class="container" style="padding-top: 1rem; padding-bottom: 1rem">
+      <p class="lead">
+        Here is a gallery of some of our adventures:
+      </p>
+    </div>
 
       <div class="grid-wrapper">
         <div class="big">
