--- a/travel.html
+++ b/travel.html
@@ -139,6 +139,7 @@
         <a class="nav-link" href="#getting-there"><i class="fas fa-compass"></i> Getting There</a>
         <a class="nav-link" href="#lodging"><i class="fas fa-home"></i> Lodging</a>
         <a class="nav-link" href="#things-to-do"><i class="fas fa-binoculars"></i> Things to Do</a>
+        <a class="nav-link" href="#places-to-eat"><i class="fas fa-carrot"></i> Places to Eat</a>
     </nav>
 </div>
 
@@ -207,16 +208,32 @@
             </p>
           </div>
           <div>
-            <h4 class="mt-3"><i class="fas fa-home"></i> Elevante BNB</h4>
-            <p>Looking for a BNB in the Lyons area?</p>
-            <p><a href="https://elevate-bnb.com/stay-with-us/" class="text-body-secondary">https://elevate-bnb.com/stay-with-us/</a></p>
+            <h4 class="mt-3"><i class="fas fa-bed"></i> Stonemountain Lodge</h4>
+            <p>Straightforward, warm rooms.</p>
+            <p><a href="https://stonemountainlodgeandcabins.client.innroad.com/" class="text-body-secondary">https://stonemountainlodgeandcabins.client.innroad.com/</a></p>
+            <p><i class="fas fa-map-marker-alt"></i>
+              <a href="https://www.google.com/maps/place/18055+N+St+Vrain,+Lyons,+Colorado" class="text-body-secondary" target="_blank">18055 N St Vrain Dr, Lyons</a>
+            </p>
           </div>
-          <div><p class="lead">There are more lodging options in the surrounding communities: Boulder, Niwot, Longmont, or even Estes Park. Please be sure you have adequate transportation.</p></div>
+          <div>
+            <h4 class="mt-3"><i class="fas fa-bed"></i> Riverside Cabins</h4>
+            <p>From here, you could float down the St. Vrain Creek right into Planet Bluegrass. How's that for an entrance?</p>
+            <p><a href="https://riversidecabinslyons.com/" class="text-body-secondary">https://riversidecabinslyons.com/</a></p>
+            <p><i class="fas fa-map-marker-alt"></i>
+              <a href="https://www.google.com/maps/place/16190+N+St+Vrain,+Lyons,+Colorado" class="text-body-secondary" target="_blank">16190 N St Vrain Dr, Lyons</a>
+            </p>
+          </div>
+          <div>
+            <h4 class="mt-3"><i class="fas fa-home"></i> VRBO</h4>
+            <p>Looking for a BNB in the Lyons area?</p>
+            <p><a href="https://www.vrbo.com/"" class="text-body-secondary">https://www.vrbo.com/</a></p>
+          </div>
         </div>
         <div class="lodging-map">
           <iframe src="https://www.google.com/maps/d/u/3/embed?mid=1499qrpAtzWyYo25CpU_nLeA4_1qyED0&ehbc=2E312F"></iframe>
         </div>
       </div>
+      <div><p class="lead">There are more lodging options in the surrounding communities: Boulder, Niwot, Longmont, or even Estes Park. Please be sure you have adequate transportation.</p></div>
     </div>
 
     <div id="things-to-do" style="padding-top:60px" class="container">
@@ -233,7 +250,7 @@
       </div>
     </div>    
 
-    <div>
+    <div style="padding-top:1rem">
       <h3 class="mt-3">Things to Do</h3>
       <ul style="list-style-type: none">
         <li><i class="fas fa-guitar"></i> The <a href="https://www.goldhillinn.com/" class="text-body-secondary">Gold Hill Inn</a> is a very important place to us.
@@ -241,8 +258,6 @@
           The Inn has an affordable (and delicious) pre-fix dinner and has been the stage for many great bluegrass acts. Check their calendar!
           But be warned, driving or biking here is not for the faint of heart. Expect steep windy dirt roads. If you do make it, check out the General Store and the free nearby camping.</li>
         <li><i class="fas fa-ring"></i> Hike 8 miles up and back <a href=https://www.alltrails.com/trail/us/colorado/south-boulder-peak-trail" class="text-body-secondary">South Boulder Peak</a>, where Maggie proposed to Julia at 8,549'. </li>
-        <li><i class="fas fa-mug-hot"></i> The <a href="https://www.boulderteahouse.com/" class="text-body-secondary">Dushanbe Tea House</a> is our favorite Boulder attraction.
-          It was built in Tajikistan and boasts beautiful architecture as well as over 100 varieties of tea.</li>
         <li><i class="fas fa-mountain"></i> <a href="https://www.nps.gov/romo/index.htm" class="text-body-secondary">Rocky Mountain National Park</a> is too close by to miss on your trip.
           Check if you need a reservation beforehand.</li>
         <li><i class="fas fa-tree"></i> <a href="https://www.fs.usda.gov/recarea/arp/recarea/" class="text-body-secondary">Indian Peaks Wilderness</a> is a great alternative to Rocky Mountain.
@@ -250,6 +265,47 @@
       </ul>
       <p>We've compiled a <a href="https://www.alltrails.com/explore/list/local-hikes-for-wedding-guests-d240cb4?b_tl_lat=40.558244270056235&b_tl_lng=-106.51577753950204&b_br_lat=39.419578087877056&b_br_lng=-104.28351747073681" class="text-body-secondary">custom All-Trails list</a> 
         of hikes to check out for all ability and altitude-aclimation levels.</p>
+    </div>
+
+    <div>
+      <h3 class="mt-3" id="places-to-eat" style="padding-top:60px">Places to Eat</h3>
+      <h4 class="mt-3">Lyons</h3>
+        <ul>
+          <li>The <a href="https://www.stvrainmarket.com/" class="text-body-secondary">St. Vrain Market</a> has THE best sandwiches.
+            This is a great stop before your day's adventure. Don't sleep on their Cherry Garcia cookie.</li>
+          <li>The <a href="https://www.moxiebreadco.com/" class="text-body-secondary">Moxie Bread Company</a> has equally delicious whole wheat and gluten free loaves.
+            This is a great place to grab morning treats and coffee.</li>
+          <li><a href="https://https://oskarblues.com/" class="text-body-secondary">Oscar Blues Brewing</a> is a good stop for beer, wings, and/or trivia.</li>
+        </ul>
+
+      <h4 class="mt-3">Boulder</h3>
+        <ul>
+          <li>The <a href="https://www.boulderteahouse.com/" class="text-body-secondary">Dushanbe Tea House</a> is our favorite Boulder attraction.
+            It was built in Tajikistan and boasts beautiful architecture as well as over 100 varieties of tea.</li>
+          <li><a href="http://flowerpeppereats.com/" class="text-body-secondary">Flower Pepper</a> is Julia's favorite Boulder stop.
+            This hole-in-the-wall has authentic Sichuanese food. Always order the soup dumplings.</li>
+          <li><a href="https://www.therayback.com/" class="text-body-secondary">Rayback Collective</a> has any local beer you could dream of.
+            Check their website for their rotating food truck selection and live music.</li>
+          <li><a href="https://www.thrive-boulder.com/" class="text-body-secondary">Thrive</a> makes the list for how extremely ~~Boulder~~ it is.
+            This raw vegan restaurant has a really cool atmosphere (ceiling plants, oracle cards, experimental jazz). Julia likes their "Tacno" salad and smoothies.</li>
+        </ul>
+
+      <h4 class="mt-3">Nederland</h3>
+        <ul>
+          <li>If you make it up to Nederland, a post hike stop at <a href="https://www.crosscutpizza.com/" class="text-body-secondary">Crosscut</a> for woodfired pizza is a must.
+            Julia always orders the extra-special cheese.</li>
+        </ul>
+
+      <h4 class="mt-3">Denver</h3>
+        <ul>
+          <li><a href="https://kikesredtacos.com/" class="text-body-secondary">Kiké's Red Tacos</a> has delicious Birria tacos.
+            Maggie thinks these are the best tacos in Colorado (Julia doesn't disagree).</li>
+          <li><a href="https://www.cart-driver.com/" class="text-body-secondary">Cart Driver</a> has good woodfired pizza in a classy smart-casual setting.</li>
+          <li><a href="https://denverbrider.com/" class="text-body-secondary">Brider</a> is one of Maggie's favorite places to get chicken, salad, cookies, or mac n' cheese.
+          They have good happy hour specials.</li>
+          <li><a href="https://supermegabien.com/" class="text-body-secondary">Super Mega Bien</a> has Latin American dim-sum style tapas. 
+            Sometimes we order and share the whole menu.</li>
+        </ul>
     </div>
      
 </main>
