--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./../assets/dist/css/bootstrap.min.css" rel="stylesheet">
   
   <style>
     .bd-placeholder-img {
@@ -82,16 +82,6 @@
       display: block !important;
     }
 
-     /*
-    * Base structure
-    */
-
-    body {
-      text-shadow: none;
-      box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-      font-family: 'Courier New', Courier, monospace;
-      background-color: #eeeeee !important;
-    }
     /* Custom styles for background image */
     body {
       background-image: url('images/cover_background.jpg');
@@ -114,23 +104,6 @@
     .navbar-transparent {
       background-color: transparent !important;
     }
-
-    .nav-text-container {
-      max-width: 70rem;
-    }
-
-    .navbar-nav .nav-item {
-      margin-left: 15px;
-    }
-
-    .navbar-nav .nav-link {
-      color: #413622 !important;
-      border-bottom: .25rem solid transparent
-    }
-
-    a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
-      color: #413622 !important;
-    }
   </style>
 
   <!-- Favicon -->
@@ -142,7 +115,7 @@
   <link rel="manifest" href="favicon_io/site.webmanifest">
   <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
 
-  <link href="css/custom.css" rel="stylesheet">
+  <link href="./css/custom.css" rel="stylesheet">
 </head>
 
 <body class="d-flex h-100 text-center text-bg-dark">
@@ -192,7 +165,7 @@
     </footer>
   </div>
 
-  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./../assets/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
