--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="./../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
   
   <style>
     .bd-placeholder-img {
@@ -97,13 +97,6 @@
         background-color: rgba(255, 255, 255, 0.5) !important;
       }
     }
-
-    /*
-    * Navbar
-    */
-    .navbar-transparent {
-      background-color: transparent !important;
-    }
   </style>
 
   <!-- Favicon -->
@@ -165,7 +158,7 @@
     </footer>
   </div>
 
-  <script src="./../assets/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
