remove rsvp, move old maps to travel

--- a/rsvp.html
+++ b/rsvp.html
@@ -66,16 +66,9 @@
     
       <div class="container">
         <h1 class="mt-5">R.S.V.P.</h1>
-        <p class="lead">This example shows a fixed navbar with no padding and how it affects the page's content. The content's top margin is adjusted to avoid the fixed navbar overlapping it.</p>
-        <p>Scroll down to see the effect. Scroll to the top to hide the navbar.</p>
+        <p class="lead">Coming soon.</p>
+        <p>We're still exploring what R.S.V.P. service to use.</p>
       </div>
-
-      <div class="text-center">
-        <img src="images/watercolorbirds_text.png" width="40%" class="mx-auto d-block" style="padding-bottom:1rem" alt="Birds">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMX_YvirXyJDm0PDiYf_p8biBStKHfsrkmo8IgzqIJWuaBuA/viewform?embedded=true" width="640" height="1377" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>        </p>
-
-      </div><br> 
-
 
       <div class="text-center">
         <img src="images/tintype.jpg" width="30%" class="mx-auto d-block" alt="Tin Type">
