--- a/travel.html
+++ b/travel.html
@@ -307,6 +307,39 @@
             Sometimes we order and share the whole menu.</li>
         </ul>
     </div>
+
+    <div class="container" style="padding:1rem">
+      <div class="row text-center">
+        <div class="col">
+          <img src="images/NY_Rhinebeck_136439_1939_62500.jpg" class="img-fluid" alt="Rhinebeck Map"  ondblclick="popImage(this.src)">
+          <p>USGS 1939<br>New York - Rhinebeck Quadrangle</p>
+        </div>
+        <div class="col">
+          <img src="images/CO_Boulder_402336_1904_62500.jpg" class="img-fluid" alt="Boulder Map" ondblclick="popImage(this.src)">
+          <p>USGS 1904<br>Colorado - Boulder Quadrangle</p>
+        </div>
+        <div class="col">
+          <img src="images/VA_Mt Vernon_189090_1894_125000.jpg" class="img-fluid" alt="Alexandria Map" ondblclick="popImage(this.src)">
+          <p>USGS 1894<br>Virginia-Maryland - Mt. Vernon Sheet</p>
+        </div>
+      </div>
+    </div>  
+    <div class="overlay" onclick="closeOverlay()">
+      <img src="" alt="Expanded Image">
+  </div>
+  
+  <script>
+      function popImage(src) {
+          const overlay = document.querySelector('.overlay');
+          overlay.style.display = 'flex';
+          overlay.querySelector('img').src = src;
+      }
+  
+      function closeOverlay() {
+          const overlay = document.querySelector('.overlay');
+          overlay.style.display = 'none';
+      }
+  </script>
      
 </main>
 
