--- a/story.html
+++ b/story.html
@@ -118,7 +118,7 @@
               <div class="col-md-6">
                   <h2>Julia Kent</h2>
                   <p>Julia is from the mid-Hudson Valley New York. She moved to Colorado in 2016 to study Atmospheric and Oceanic Sciences at CU Boulder.
-                    Since 2019 she has worked as a scientist/software engineer for climate analysis at the National Center for Atmospheric Research.
+                    Since 2019 she has worked as a scientist/software engineer creating tooling for climate analysis at the National Center for Atmospheric Research.
                     She loves to knit, read fantasy, and swim-bike-run triathlons.
                   </p>
               </div>
