--- a/travel.html
+++ b/travel.html
@@ -306,6 +306,8 @@
           <li><a href="https://supermegabien.com/" class="text-body-secondary">Super Mega Bien</a> has Latin American dim-sum style tapas. 
             Sometimes we order and share the whole menu.</li>
         </ul>
+
+      <p class="lead">Thank you for making the journey!</p>
     </div>
 
     <div class="container" style="padding:1rem">
