--- a/rsvp.html
+++ b/rsvp.html
@@ -70,7 +70,7 @@
         <p>We're still exploring what R.S.V.P. service to use.</p>
       </div>
 
-      <div class="text-center">
+      <div class="text-center" style="padding-bottom:1rem">
         <img src="images/tintype.jpg" width="30%" class="mx-auto d-block" alt="Tin Type">
       </div> 
 
