--- a/story.html
+++ b/story.html
@@ -109,7 +109,7 @@
 
         <div class="text-center">
           <p style="font-size: small">~It's Love. It's Love, It always was, and it is, and it always will be Love.~</p>
-          <img src="images/setlist.png" width="50%" class="mx-auto d-block" alt="Set List">
+          <img src="images/setlist.png" width="50%" class="mx-auto d-block" alt="Set List" ondblclick="popImage(this.src)">
         </div>
 
         <div class="container mt-5">
