--- a/travel.html
+++ b/travel.html
@@ -161,7 +161,7 @@
           </p>
       </div>
       <div style="padding-top: 2rem">
-          <img src="images/planet_bluegrass_logo.png" width="40%" class="mx-auto d-block" alt="Planet Bluegrass">
+          <img src="images/planet_bluegrass_logo.png" width="60%" class="mx-auto d-block" alt="Planet Bluegrass">
       </div>
   </div>
   
@@ -262,6 +262,8 @@
           Check if you need a reservation beforehand.</li>
         <li><i class="fas fa-tree"></i> <a href="https://www.fs.usda.gov/recarea/arp/recarea/" class="text-body-secondary">Indian Peaks Wilderness</a> is a great alternative to Rocky Mountain.
           It butts up against RMNP, but is significantly less crowded, closer, and cheaper. Just as beautiful though!</li>
+        <li><i class="fas fa-cat"></i> <a href="https://www.meowwolf.com/denver" class="text-body-secondary">Meow Wolf</a> is an immersive art museum worth getting lost in.
+          The story continues from the Santa Fe and Vegas locations.</li>
       </ul>
       <p>We've compiled a <a href="https://www.alltrails.com/explore/list/local-hikes-for-wedding-guests-d240cb4?b_tl_lat=40.558244270056235&b_tl_lng=-106.51577753950204&b_br_lat=39.419578087877056&b_br_lng=-104.28351747073681" class="text-body-secondary">custom All-Trails list</a> 
         of hikes to check out for all ability and altitude-aclimation levels.</p>
@@ -282,8 +284,8 @@
         <ul>
           <li>The <a href="https://www.boulderteahouse.com/" class="text-body-secondary">Dushanbe Tea House</a> is our favorite Boulder attraction.
             It was built in Tajikistan and boasts beautiful architecture as well as over 100 varieties of tea.</li>
-          <li><a href="http://flowerpeppereats.com/" class="text-body-secondary">Flower Pepper</a> is Julia's favorite Boulder stop.
-            This hole-in-the-wall has authentic Sichuanese food. Always order the soup dumplings.</li>
+          <li><a href="http://flowerpeppereats.com/" class="text-body-secondary">Flower Pepper</a> is Julia's favorite hole-in-the-wall:
+            authentic Sichuanese food, perfectly bite-sized the soup dumplings, yum.</li>
           <li><a href="https://www.therayback.com/" class="text-body-secondary">Rayback Collective</a> has any local beer you could dream of.
             Check their website for their rotating food truck selection and live music.</li>
           <li><a href="https://www.thrive-boulder.com/" class="text-body-secondary">Thrive</a> makes the list for how extremely ~~Boulder~~ it is.
