fix toggle color and dropdown color

--- a/faq.html
+++ b/faq.html
@@ -196,7 +196,7 @@
         <div class="collapse" id="collapsePhotos">
           <div class="card card-body"><p>
             Please refrain from taking photos during the ceremony. <br><br>
-            Afterwards, go wiild!
+            Afterwards, go wild!
           </p></div>
         </div>
         <br>
