--- a/travel.html
+++ b/travel.html
@@ -168,15 +168,16 @@
       <h4 class="mt-3"><i class="fas fa-bus"></i> Busses and Shuttles:</h3>
         <ul>
           <li>The <a href="https://eightblackairportshuttle.com/" class="text-body-secondary">Eight Black Airport Shuttle</a> is a great option for door-to-door (airport to hotel) service from DIA.</li>
-          <li>Consider taking the <a href=" rtd-denver.com" class="text-body-secondary">Regional Transportation District</a>.</li>
-          The (RTD) <a href="https://app.rtd-denver.com/route/AB1/schedule" class="text-body-secondary">AB Line</a> from the airport to downtown Boulder, and the <a href="townoflyons.com/370/Sustainability-Resources-Transportation" class="text-body-secondary">Lyons Flyer</a> goes from downtown Boulder to Lyons.<br>
+          <li>Consider taking the <a href=" rtd-denver.com" class="text-body-secondary">Regional Transportation District</a>. <br>
+          The (RTD) <a href="https://app.rtd-denver.com/route/AB1/schedule" class="text-body-secondary">AB Line</a> from the airport to downtown Boulder,
+          and the <a href="townoflyons.com/370/Sustainability-Resources-Transportation" class="text-body-secondary">Lyons Flyer</a> goes from downtown Boulder to Lyons.</li>
           <li>There is also a <a href="bouldercounty.gov/transportation/multimodal/lyons-taxi-voucher-program/" class="text-body-secondary">Lyons taxi voucher program</a> that is worth looking into.</li>  
         </ul>
     </div>
 
     <div class="text-center">
       <img src="images/fantasy_map.jpg" width="60%" class="mx-auto d-block" alt="Fantasy Map">
-    </div>  
+    </div> 
 
     <div id="lodging" style="padding-top:60px">
       <h3 class="mt-3">Lodging</h3>
