let fantasy map popout

--- a/travel.html
+++ b/travel.html
@@ -176,8 +176,11 @@
     </div>
 
     <div class="text-center">
-      <img src="images/fantasy_map.jpg" width="60%" class="mx-auto d-block" alt="Fantasy Map">
+      <img src="images/fantasy_map.jpg" width="60%" class="mx-auto d-block" alt="Fantasy Map" ondblclick="popImage(this.src)">
     </div> 
+    <div class="overlay" onclick="closeOverlay()">
+      <img src="" alt="Expanded Image">
+  </div> 
 
     <div id="lodging" style="padding-top:60px">
       <h3 class="mt-3">Lodging</h3>
