--- a/travel.html
+++ b/travel.html
@@ -180,7 +180,7 @@
     </div> 
     <div class="overlay" onclick="closeOverlay()">
       <img src="" alt="Expanded Image">
-  </div> 
+    </div> 
 
     <div id="lodging" style="padding-top:60px">
       <h3 class="mt-3">Lodging</h3>
@@ -206,7 +206,7 @@
           <div>
             <h4 class="mt-3"><i class="fas fa-bed"></i> Stonemountain Lodge</h4>
             <p>Straightforward, warm rooms.</p>
-            <p><a href="https://stonemountainlodgeandcabins.client.innroad.com/" class="text-body-secondary">https://stonemountainlodgeandcabins.client.innroad.com/</a></p>
+            <p style="word-wrap: break-word"><a href="https://stonemountainlodgeandcabins.client.innroad.com/" class="text-body-secondary">https://stonemountainlodgeandcabins.client.innroad.com/</a></p>
             <p><i class="fas fa-map-marker-alt"></i>
               <a href="https://www.google.com/maps/place/18055+N+St+Vrain,+Lyons,+Colorado" class="text-body-secondary" target="_blank">18055 N St Vrain Dr, Lyons</a>
             </p>
