--- a/schedule.html
+++ b/schedule.html
@@ -90,7 +90,7 @@
               And bring a layer! Colorado regularly has 30° temperature swings between day and night.</p>
 
             <h3 class="mt-3">Sunday, August 24</h3>
-            <p>Join us for a casual brunch before your flights home.</p>
+            <p>Join us for a casual brunch before your flight home.</p>
             <p>Location: <b>TBD</b> in Lyons, CO</p>
             <p>Time: <b>TBD</b></p>
             <p>Dress: Anything goes!</p>
