--- a/story.html
+++ b/story.html
@@ -170,6 +170,9 @@
         <div>
           <img src="images/masonry/foco.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
+        <div>
+          <img src="images/masonry/maggies_ring.png" alt="" ondblclick="popImage(this.src)">
+        </div>
         <div class="tall">
           <img src="images/masonry/beanstalk.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
@@ -178,6 +181,9 @@
         </div>
         <div class="tall">
           <img src="images/masonry/loneeaglepeak.jpg" alt="" ondblclick="popImage(this.src)">
+        </div>
+        <div>
+          <img src="images/masonry/julias_ring.png" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="tall">
           <img src="images/masonry/hawaii.jpg" alt="" ondblclick="popImage(this.src)">
@@ -211,6 +217,9 @@
         </div>
         <div>
           <img src="images/masonry/Raava.jpg" alt="" ondblclick="popImage(this.src)">
+        </div>
+        <div>
+          <img src="images/masonry/cats.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
 
       </div>
