--- a/thank-you.html
+++ b/thank-you.html
@@ -84,8 +84,8 @@
         </p>
       </div>
 
-      <div class="text-center">
-        <img src="images/Birds.png" width="50%" class="mx-auto d-block" alt="Bird Stamp">
+      <div class="text-center" style="padding:1rem">
+        <img src="images/Birds.png" width="40%" class="mx-auto d-block" alt="Birds">
       </div> 
 
     </main>
