--- a/story.html
+++ b/story.html
@@ -61,10 +61,10 @@
 
       /* CSS for adjusting the size of the family tree image */
     .family-tree {
-      width: 768px;
+      width: 70%;
     }
     /* CSS for smaller screens */
-    @media (max-width: 1000px) {
+    @media (max-width: 1200px) {
       .family-tree {
         width: 100%;
       }
@@ -264,7 +264,7 @@
       </script>
 
     <div class="text-center" style="padding: 2rem">
-      <img src="images/FamilyTree.drawio.png" class="mx-auto d-block family-tree" alt="Family Tree">
+      <img src="images/FamilyTree.drawio.svg" class="mx-auto d-block family-tree" alt="Family Tree">
     </div>
 
     </main>
