numbering was wrong font

--- a/story.html
+++ b/story.html
@@ -127,7 +127,7 @@
 
         <div class="text-center">
           <p style="font-size: small">~It's Love. It's Love, It always was, and it is, and it always will be Love.~</p>
-          <img src="images/setlist.drawio.svg" class="mx-auto d-block setlist" style="border: 1rem solid white" alt="Set List" ondblclick="popImage(this.src)">
+          <img src="images/setlist.drawio.svg" class="mx-auto d-block setlist" style="border-left: 1.5rem solid white" alt="Set List" ondblclick="popImage(this.src)">
         </div>
 
         <div class="container mt-5">
