tintype smaller on mobile

--- a/rsvp.html
+++ b/rsvp.html
@@ -19,6 +19,16 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
+    <style>
+    .tintype {
+      width: 30%;
+    }
+    @media (max-width: 1000px) {
+      .tintype {
+        width: 80%;
+      }
+    }
+    </style>
 
   </head>
      
@@ -71,7 +81,7 @@
       </div>
 
       <div class="text-center" style="padding-bottom:1rem">
-        <img src="images/tintype.jpg" width="30%" class="mx-auto d-block" alt="Tin Type">
+        <img src="images/tintype.jpg" class="mx-auto d-block tintype" class="mx-auto d-block" alt="Tin Type">
       </div> 
 
     </main>
