--- a/story.html
+++ b/story.html
@@ -126,7 +126,7 @@
         <p class="lead">Maggie and Julia first met shortly after Maggie noticed Julia in the port-a-potty lines on lot at Phish Dick's.</p>
 
         <div class="text-center">
-          <p style="font-size: small">~It's Love. It's Love, It always was, and it is, and it always will be Love.~</p>
+          <p style="font-size: small">~It's Love. It's Love. It always was, and it is, and it always will be Love.~</p>
           <img src="images/setlist.drawio.svg" class="mx-auto d-block setlist" style="border-left: 1.5rem solid white" alt="Set List" ondblclick="popImage(this.src)">
         </div>
 
