--- a/travel.html
+++ b/travel.html
@@ -155,8 +155,15 @@
       <div>
           <h1 class="mt-3">Travel</h1>
           <p class="lead">Your destination for the weekend is <a href="https://bluegrass.com/" class="text-body-secondary">Planet Bluegrass</a> in Lyons, CO!</p>
+          <div class="container" width="40%">
+            <p>The Planet Bluegrass Ranch is located off of Highway 36 just
+              North of the historic town of Lyons, CO. Bordered by the Saint
+              Vrain River, it is about 30 minutes North of Boulder, and an
+              hour from Denver or Fort Collins.
+            </p>
+          </div>
           <p><i class="fas fa-map-marker-alt"></i>
-              <a href="https://www.google.com/maps/place/500+W+Main+St,+Lyons,+Colorado" class="text-body-secondary" target="_blank">500 W Main St, Lyons</a>
+            <a href="https://www.google.com/maps/place/500+W+Main+St,+Lyons,+Colorado" class="text-body-secondary" target="_blank">500 W Main St, Lyons</a>
           </p>
       </div>
       <div style="padding-top: 2rem">
@@ -270,6 +277,8 @@
           The story continues from the Santa Fe and Vegas locations, but you don't need to have visited those first to enjoy it.</li>
         <li><i class="fas fa-mug-hot"></i> Take a tea tour at <a href="https://celestialseasonings.com/pages/tea-tour" class="text-body-secondary">Celestial Seasonings</a> in North Boulder.
           The mint room is Julia's happy place.</li>
+        <li><i class="fas fa-drum"></i> <a href="https://www.redrocksonline.com/" class="text-body-secondary">Red Rocks Park and Amphitheatre</a> is worth visiting day or night.
+            There are trails, a museum, and if you time it right - maybe see a show!</li>
       </ul>
       <p>We've compiled a <a href="https://www.alltrails.com/explore/list/local-hikes-for-wedding-guests-d240cb4?b_tl_lat=40.558244270056235&b_tl_lng=-106.51577753950204&b_br_lat=39.419578087877056&b_br_lng=-104.28351747073681" class="text-body-secondary">custom All-Trails list</a> 
         of hikes to check out for all ability and altitude-aclimation levels.</p>
