make images smaller

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     /* Custom styles for background image */
     body {
-      background-image: url('images/cover_background.jpg');
+      background-image: url('images/cover_background.jpeg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
