--- a/story.html
+++ b/story.html
@@ -148,7 +148,7 @@
           <div class="row mt-4">
               <div class="col-md-6">
                   <h2>Maggie Sawyers</h2>
-                  <p>Maggie was born in Germany, but considers Alexandria, Virginia her hometown. She moved to Colorado in 2017, and has been forming an ever growing community here ever since.
+                  <p>Maggie was born in Germany, but considers Alexandria, Virginia her hometown. She moved to Colorado in 2017, and has been forming an ever-growing community here since.
                     Maggie works as an accountant for the Buddhist publication company Shambhala Publications.
                     She loves permaculture, collaging, and pin-collecting. 
                   </p>
@@ -177,52 +177,52 @@
 
       <div class="grid-wrapper">
         <div class="big">
-          <img src="images/masonry/proposal.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/proposal.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="big">
-          <img src="images/masonry/vegas.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/vegas.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
-          <img src="images/masonry/backpacking.JPG" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/backpacking.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
-          <img src="images/masonry/foco.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/foco.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
-          <img src="images/masonry/maggies_ring.png" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/maggies_ring.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="tall">
-          <img src="images/masonry/beanstalk.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/beanstalk.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="wide">
-          <img src="images/masonry/tetons.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/tetons.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="tall">
-          <img src="images/masonry/loneeaglepeak.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/loneeaglepeak.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
-          <img src="images/masonry/julias_ring.png" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/julias_ring.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="tall">
-          <img src="images/masonry/hawaii.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/hawaii.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="big">
           <img src="images/masonry/rrx.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
-          <img src="images/masonry/snowshoe.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/snowshoe.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="wide">
-          <img src="images/masonry/glenwood.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/glenwood.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="big">
-          <img src="images/masonry/utah.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/utah.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="tall">
           <img src="images/masonry/selfie.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="big">
-          <img src="images/masonry/laughing.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/laughing.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>  
         <div>
           <img src="images/masonry/fox.jpeg" alt="" ondblclick="popImage(this.src)">
@@ -231,13 +231,13 @@
           <img src="images/masonry/princeton.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
-          <img src="images/masonry/Pabu.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/Pabu.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
-          <img src="images/masonry/Raava.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/Raava.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
-          <img src="images/masonry/cats.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/cats.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
 
       </div>
