--- a/travel.html
+++ b/travel.html
@@ -80,9 +80,9 @@
     }
 
     /* CSS for limiting maximum image width on smaller screens */
-    @media (max-width: 576px) { /* Adjust breakpoint as needed */
+    @media (max-width: 576px) {
       .col img {
-        max-width: 100%; /* Set maximum width to 100% of the parent container */
+        max-width: 50%;
       }
     }
   </style>
@@ -190,7 +190,7 @@
     </div>
 
     <div class="text-center">
-      <img src="images/fantasy_map.jpg" width="60%" class="mx-auto d-block" alt="Fantasy Map" ondblclick="popImage(this.src)">
+      <img src="images/fantasy_map.jpeg" width="60%" class="mx-auto d-block" alt="Fantasy Map" ondblclick="popImage(this.src)">
     </div> 
     <div class="overlay" onclick="closeOverlay()">
       <img src="" alt="Expanded Image">
@@ -249,7 +249,7 @@
     <div id="things-to-do" style="padding-top: 60px" class="container">
       <div class="row text-center">
         <div class="col-12 col-md-4">
-          <img src="images/goldhillinn.png" class="img-fluid" alt="Gold Hill Inn">
+          <img src="images/goldhillinn.jpeg" class="img-fluid" alt="Gold Hill Inn">
         </div>
         <div class="col-12 col-md-4">
           <img src="images/dushanbe.jpeg" class="img-fluid" alt="Dushanbe Tea House">
@@ -330,15 +330,15 @@
     <div class="container" style="padding:1rem">
       <div class="row text-center">
         <div class="col">
-          <img src="images/NY_Rhinebeck_136439_1939_62500.jpg" class="img-fluid" alt="Rhinebeck Map"  ondblclick="popImage(this.src)">
+          <img src="images/NY_Rhinebeck_136439_1939_62500.jpeg" class="img-fluid" alt="Rhinebeck Map"  ondblclick="popImage(this.src)">
           <p>USGS 1939<br>New York - Rhinebeck Quadrangle</p>
         </div>
         <div class="col">
-          <img src="images/CO_Boulder_402336_1904_62500.jpg" class="img-fluid" alt="Boulder Map" ondblclick="popImage(this.src)">
+          <img src="images/CO_Boulder_402336_1904_62500.jpeg" class="img-fluid" alt="Boulder Map" ondblclick="popImage(this.src)">
           <p>USGS 1904<br>Colorado - Boulder Quadrangle</p>
         </div>
         <div class="col">
-          <img src="images/VA_Mt Vernon_189090_1894_125000.jpg" class="img-fluid" alt="Alexandria Map" ondblclick="popImage(this.src)">
+          <img src="images/VA_Mt Vernon_189090_1894_125000.jpeg" class="img-fluid" alt="Alexandria Map" ondblclick="popImage(this.src)">
           <p>USGS 1894<br>Virginia-Maryland - Mt. Vernon Sheet</p>
         </div>
       </div>
