--- a/rsvp.html
+++ b/rsvp.html
@@ -78,7 +78,7 @@
 
       <div class="text-center" style="text-align: center;">
         <iframe class="rsvpcard"
-          style="display: block; border: none; overflow: hidden; margin-left: auto; margin-right: auto;" 
+          style="display: block; border: none; overflow: hidden; margin-left: auto; margin-right: auto; color-scheme: light" 
           src="https://weddingjam.anrsvp.com/?embed=true">
         </iframe>
       </div>
