--- a/schedule.html
+++ b/schedule.html
@@ -68,7 +68,7 @@
         <div class="row">
           <div class="col-md-6">
             <h1 class="mt-3">Schedule</h1>
-            <img src="images/ringhands.jpg" class="rounded img-fluid" width="90%" alt="Ring Hands">
+            <img src="images/ringhands.jpeg" class="rounded img-fluid" width="90%" alt="Ring Hands">
           </div>
           <div class="col-md-6 d-flex flex-column justify-content-center">
             <h1 class="mt-3"></h1>
