update faq answers

--- a/faq.html
+++ b/faq.html
@@ -195,7 +195,7 @@
         </p>
         <div class="collapse" id="collapsePhotos">
           <div class="card card-body"><p>
-            Please refrain from taking photos during the ceremony. <br><br>
+            Please refrain from taking photos during the ceremony. No phones or cameras allowed.<br><br>
             Afterwards, go wild!
           </p></div>
         </div>
@@ -226,7 +226,7 @@
         </p>
         <div class="collapse" id="collapseQuestions">
           <div class="card card-body"><p>
-            As we will be very busy day of, please bring any concerns or questions to our lovely coordinator XX. She can be reached at XXX-XXX-XXXX.
+            As we will be very busy day of, please bring any concerns or questions to our lovely coordinator. Contact information available soon.
           </p></div>
         </div>
         <br>
