let's get some shoes

--- a/faq.html
+++ b/faq.html
@@ -180,7 +180,7 @@
         </p>
         <div class="collapse" id="collapseShoes">
           <div class="card card-body"><p>
-            The ceremony will be outside without paved paths, so wear appropriate footwear.
+            The ceremony will be outside without paved paths, so wear appropriate footwear. Stilettos not recommended.
           </p></div>
         </div>
         <br>
